[package]
name = "lol-api"
version = "0.1.0"
authors = ["Victor Quiroz Castro <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
failure = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
log = "0.4"
url = "2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.16.0"
strum_macros = "0.16.0"
